--- a/SailScores.Web/Views/Regatta/Edit.cshtml
+++ b/SailScores.Web/Views/Regatta/Edit.cshtml
@@ -36,12 +36,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input id="date" asp-for="StartDate" class="form-control" />
+                <input asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input id="date" asp-for="EndDate" class="form-control" />
+                <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div id="fleets" class="form-group">
