--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -1,6 +1,8 @@
 @using Microsoft.Extensions.Localization;
 @using SailScores.Web.Resources;
 @using SailScores.Web.Extensions;
+@using Microsoft.AspNetCore.Http.Extensions;
+
 @inject IStringLocalizer<SharedResource> localizer
 
 @model SailScores.Web.Models.SailScores.ClubSummaryViewModel
@@ -17,9 +19,11 @@
 {
     <div class="row">
         <div class="col-12">
-            <p><a href="@Model.Url" target="_blank">
-                <span class="fas fa-external-link-alt"></span> @localizer["Club Web Site"]
-            </a></p>
+            <p>
+                <a href="@Model.Url" target="_blank">
+                    <span class="fas fa-external-link-alt"></span> @localizer["Club Web Site"]
+                </a>
+            </p>
         </div>
     </div>
 }
@@ -33,24 +37,24 @@
 }
 @if (Model.CurrentRegattas.Any())
 {
-<div class="row">
-    <div class="col-md-12">
-        <h2>Regatta!</h2>
-        @foreach (var regatta in Model.CurrentRegattas)
-        {
-            @if (regatta.UpdatedDate.HasValue && regatta.UpdatedDate > DateTime.Now.AddDays(-15))
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Regatta!</h2>
+            @foreach (var regatta in Model.CurrentRegattas)
             {
-                @regatta.StartDate?.ToString("D") @:- @regatta.EndDate?.ToString("D")
+                @if (regatta.UpdatedDate.HasValue && regatta.UpdatedDate > DateTime.Now.AddDays(-15))
+                {
+                    @regatta.StartDate?.ToString("D") @:- @regatta.EndDate?.ToString("D")
+                }
+                <h3>
+                    <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.UrlName">
+                        @regatta.Season.Name  @regatta.Name
+                    </a>
+                </h3>
+                <br />
             }
-            <h3>
-                <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.UrlName">
-                    @regatta.Season.Name  @regatta.Name
-                </a>
-            </h3>
-            <br />
-        }
+        </div>
     </div>
-</div>
 }
 <div class="row">
     @if (Model.ImportantSeries.Any())
@@ -64,7 +68,7 @@
                         <a href="~/@ViewData["ClubInitials"]/@series.Season.Name/@series.Name">
                             @series.Season.Name  @series.Name
                         </a>
-                        @if(series.UpdatedDate.HasValue && series.UpdatedDate > DateTime.Now.AddDays(-15))
+                        @if (series.UpdatedDate.HasValue && series.UpdatedDate > DateTime.Now.AddDays(-15))
                         {
                             <i><small>Updated @series.UpdatedDate.ToApproxTimeAgoString()</small></i>
                         }
@@ -168,11 +172,13 @@
         <div class="col-sm-3 my-2">
             <a asp-controller="Competitor"
                asp-action="Create"
+               asp-route-returnUrl="@Context.Request.GetEncodedUrl()"
                class="btn btn-outline-primary">New Competitor</a>
         </div>
         <div class="col-sm-3 my-2">
             <a asp-controller="Race"
                asp-action="Create"
+               asp-route-returnUrl="@Context.Request.GetEncodedUrl()"
                class="btn btn-outline-primary">New Race</a>
         </div>
     </div>
