--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -24,6 +24,7 @@
                 <span class="small">Some special characters are not allowed: : / ? # [ ] @@ ! $ & ' ( ) * + , ; =</span>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <!-- Should display uneditable urlName here? -->
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
