--- a/SailScores.Web/Views/Series/Index.cshtml
+++ b/SailScores.Web/Views/Series/Index.cshtml
@@ -42,7 +42,7 @@
             {
                 <tr>
                     <td>
-                        <a href="~/@Model.ClubInitials/@series.Season.Name/@series.Name">
+                        <a href="~/@Model.ClubInitials/@series.Season.Name/@series.UrlName">
                             @Html.DisplayFor(modelItem => series.Name)
                         </a>
                         (@(series.Races?.Count.ToString() ?? "No") Races)
