--- a/SailScores.Web/Views/Series/Index.cshtml
+++ b/SailScores.Web/Views/Series/Index.cshtml
@@ -23,7 +23,6 @@
                         </a>
                     </li>
                 }
-
             </ul>
         </div>
     </nav>
@@ -45,7 +44,7 @@
                         <a href="~/@Model.ClubInitials/@series.Season.Name/@series.UrlName">
                             @Html.DisplayFor(modelItem => series.Name)
                         </a>
-                        (@(series.Races?.Count.ToString() ?? "No") Races)
+                        (@(series.Races?.Count.ToString() ?? "No") @localizer["Races"])
                     </td>
                     <td>
                         @series.DateString
@@ -54,7 +53,7 @@
                         @Html.DisplayFor(modelItem => series.Description)
                         @if (series.UpdatedDate.HasValue)
                         {
-                            <span class="d-none d-md-table-cell"><i>Updated @(series.UpdatedDate.Value.ToString("d"))</i></span>
+                            <span class="d-none d-md-table-cell"><i>@localizer["Updated"] @(series.UpdatedDate.Value.ToString("d"))</i></span>
                         }
                     </td>
                 </tr>
