--- a/SailScores.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SailScores.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,18 +1,22 @@
 @using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.Http.Extensions;
+@using Microsoft.AspNetCore.Http.Extensions
+@using Microsoft.Extensions.Localization
+@using SailScores.Web.Resources;
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+
+@inject IStringLocalizer<SharedResource> localizer
 
 @if (SignInManager.IsSignedIn(User))
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <a class="nav-link" href="/Identity/Account/Manage/ChangePassword" title="Change Password">@UserManager.GetUserName(User)</a>
-        <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+        <button type="submit" class="btn btn-link navbar-btn navbar-link">@localizer["Log out"]</button>
     </form>
 }
 else
 {
     <a class="nav-link pt-0" asp-area="" asp-controller="Account" asp-action="Login"
-       asp-route-returnUrl="@Context.Request.GetEncodedUrl()">Log in</a>
+       asp-route-returnUrl="@Context.Request.GetEncodedUrl()">@localizer["Log in"]</a>
 }
