--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -1,4 +1,9 @@
-﻿@model SailScores.Web.Models.SailScores.AdminViewModel
+﻿@using Microsoft.Extensions.Localization
+@using SailScores.Web.Resources
+
+@inject IStringLocalizer<SharedResource> localizer
+
+@model SailScores.Web.Models.SailScores.AdminViewModel
 
 @{
     ViewData["Title"] = "Admin " + Model.Name;
@@ -42,14 +47,14 @@
 }
 
 <h2>@Model.Name</h2>
-<h3>Administrator View</h3>
+<h3>Admin</h3>
 <hr />
 
 <div class="row">
     <div class="col-sm-4">
         <a asp-controller="Race"
            asp-action="Create"
-           class="btn btn-outline-primary btn-sm">Create New Race</a>
+           class="btn btn-outline-primary btn-sm">@localizer["New Race"]</a>
     </div>
 </div>
 <hr />
@@ -104,12 +109,12 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script>
-$('.collapse').on('show.bs.collapse', function(e) {
-  var $card = $(this).closest('.card');
-  $('html,body').animate({
-    scrollTop: $card.offset().top - 50
-  }, 300);
-});
-</script>
+    <script>
+        $('.collapse').on('show.bs.collapse', function (e) {
+            var $card = $(this).closest('.card');
+            $('html,body').animate({
+                scrollTop: $card.offset().top - 50
+            }, 300);
+        });
+    </script>
 }
