Add club to regatta results

--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -1,4 +1,4 @@
-@using SailScores.Web.Models.SailScores
+﻿@using SailScores.Web.Models.SailScores
 @using SailScores.Core.Model
 @using SailScores.Core.FlatModel
 @using SailScores.Api.Enumerations
@@ -24,6 +24,10 @@
                     <th scope="col">@localizer["Sail"]</th>
                     <th scope="col">@localizer["Helm"]</th>
                     <th scope="col" class="d-none d-sm-table-cell">@localizer["Boat"]</th>
+                    @if (Model.PartOfRegatta ?? false)
+                    {
+                        <th scope="col" class="d-none d-sm-table-cell">@localizer["Club"]</th>
+                    }
                     <th scope="col" class="text-center">@localizer["Total"]</th>
                     @{ var colCount = 0;}
                     @foreach (var race in Model.FlatResults?.Races ?? Enumerable.Empty<FlatRace>())
@@ -74,93 +78,98 @@
                 @foreach (var comp in compList)
                 {
                     colCount = 0;
-                    <tr>
-                        <th scope="row">@Model.FlatResults.GetScore(comp)?.Rank</th>
-                        @if ((Model.TrendOption ?? TrendOption.None) != TrendOption.None)
-                        {
-                            <th scope="row" class="d-none d-sm-table-cell">
-                                @if (Model.FlatResults.GetScore(comp)?.Trend > 0)
-                                {
-                                    <span class="text-success">
-                                        <span class="fas fa-arrow-up"></span>
-                                        @Model.FlatResults.GetScore(comp).Trend.Value
-                                    </span>
-                                }
-                                else if (Model.FlatResults.GetScore(comp)?.Trend < 0)
-                                {
-                                    <span class="text-danger">
-                                        <span class="fas fa-arrow-down"></span>
-                                        @Math.Abs(Model.FlatResults.GetScore(comp).Trend.Value)
-                                    </span>
-                                }
-
-                            </th>
-                        }
-                        <th scope="row">
-                            @if ((Model.PreferAlternativeSailNumbers ?? false)
-                               && !String.IsNullOrWhiteSpace(comp.AlternativeSailNumber)) {
-                                    @comp.AlternativeSailNumber 
-                            } else
+                <tr>
+                    <th scope="row">@Model.FlatResults.GetScore(comp)?.Rank</th>
+                    @if ((Model.TrendOption ?? TrendOption.None) != TrendOption.None)
+                    {
+                        <th scope="row" class="d-none d-sm-table-cell">
+                            @if (Model.FlatResults.GetScore(comp)?.Trend > 0)
                             {
-                                @comp.SailNumber
+                                <span class="text-success">
+                                    <span class="fas fa-arrow-up"></span>
+                                    @Model.FlatResults.GetScore(comp).Trend.Value
+                                </span>
                             }
+                            else if (Model.FlatResults.GetScore(comp)?.Trend < 0)
+                            {
+                                <span class="text-danger">
+                                    <span class="fas fa-arrow-down"></span>
+                                    @Math.Abs(Model.FlatResults.GetScore(comp).Trend.Value)
+                                </span>
+                            }
+
                         </th>
-                        <th scope="row">@comp.Name</th>
-                        <td class="d-none d-sm-table-cell">@comp.BoatName</td>
-                        <td scope="row" class="text-center">
-                            <strong>
-                                @String.Format("{0:0.##}", Model.FlatResults.GetScore(comp)?.TotalScore)
-
-                                @if (Model.FlatResults.IsPercentSystem &&
-                        Model.FlatResults.GetScore(comp)?.TotalScore != null)
-                                {
-                                    <br />
-                                    <span class="small">
-                                        (@Model.FlatResults.GetScore(comp).PointsEarned /
-                                        @Model.FlatResults.GetScore(comp).PointsPossible.Value.ToString("N0"))
-                                    </span>
-                                }
-                            </strong>
-                        </td>
-
-                        @foreach (var race in Model.FlatResults.Races)
+                    }
+                    <th scope="row">
+                        @if ((Model.PreferAlternativeSailNumbers ?? false)
+                          && !String.IsNullOrWhiteSpace(comp.AlternativeSailNumber))
                         {
-                            if (race.State == RaceState.Abandoned)
-                            {
-                                if (firstRow)
-                                {
-                                    <td rowspan="@(Model.FlatResults?.Competitors?.Count() ?? 1)" class="abandoned d-none d-sm-table-cell">
-                                        <span>ABANDONED</span>
-                                    </td>
-                                }
-                            }
-                            else if (race.State == RaceState.Scheduled)
-                            {
-                                if (firstRow)
-                                {
-                                    <td rowspan="@(Model.FlatResults?.Competitors?.Count() ?? 1)" class="scheduled d-none d-sm-table-cell">
-                                        <span>SCHEDULED</span>
-                                    </td>
-                                }
-                            }
-                            else
-                            {
-                                var result = Model.FlatResults.GetScore(comp, race);
-
-                                @await Html.PartialAsync("_ScoreCell", result, cellViewData)
-                            }
-                            if (++colCount % 25 == 0 && (Model.FlatResults.NumberOfSailedRaces - colCount) > 10)
-                            {
-                                <td>@comp.Name</td>
-                            }
+                            @comp.AlternativeSailNumber
                         }
-                        @if ((Model.FlatResults.NumberOfSailedRaces) > 4)
+                        else
                         {
-                            <th class="d-table-cell @(( Model.FlatResults.NumberOfSailedRaces < 25)?"d-md-none":"")">@comp.Name</th>
+                            @comp.SailNumber
                         }
-                        @{firstRow = false;
+                    </th>
+                    <th scope="row">@comp.Name</th>
+                    <td class="d-none d-sm-table-cell">@comp.BoatName</td>
+                    @if (Model.PartOfRegatta ?? false) {
+                        <td class="d-none d-sm-table-cell">@comp.HomeClubName</td>
+                    }
+                    <td scope="row" class="text-center">
+                        <strong>
+                            @String.Format("{0:0.##}", Model.FlatResults.GetScore(comp)?.TotalScore)
+
+                            @if (Model.FlatResults.IsPercentSystem &&
+                   Model.FlatResults.GetScore(comp)?.TotalScore != null)
+                            {
+                                <br />
+                                <span class="small">
+                                    (@Model.FlatResults.GetScore(comp).PointsEarned /
+                                    @Model.FlatResults.GetScore(comp).PointsPossible.Value.ToString("N0"))
+                                </span>
+                            }
+                        </strong>
+                    </td>
+
+                    @foreach (var race in Model.FlatResults.Races)
+                    {
+                        if (race.State == RaceState.Abandoned)
+                        {
+                            if (firstRow)
+                            {
+                                <td rowspan="@(Model.FlatResults?.Competitors?.Count() ?? 1)" class="abandoned d-none d-sm-table-cell">
+                                    <span>ABANDONED</span>
+                                </td>
+                            }
                         }
-                    </tr>
+                        else if (race.State == RaceState.Scheduled)
+                        {
+                            if (firstRow)
+                            {
+                                <td rowspan="@(Model.FlatResults?.Competitors?.Count() ?? 1)" class="scheduled d-none d-sm-table-cell">
+                                    <span>SCHEDULED</span>
+                                </td>
+                            }
+                        }
+                        else
+                        {
+                            var result = Model.FlatResults.GetScore(comp, race);
+
+                            @await Html.PartialAsync("_ScoreCell", result, cellViewData)
+                        }
+                        if (++colCount % 25 == 0 && (Model.FlatResults.NumberOfSailedRaces - colCount) > 10)
+                        {
+                            <td>@comp.Name</td>
+                        }
+                    }
+                    @if ((Model.FlatResults.NumberOfSailedRaces) > 4)
+                    {
+                        <th class="d-table-cell @(( Model.FlatResults.NumberOfSailedRaces < 25)?"d-md-none":"")">@comp.Name</th>
+                    }
+                    @{firstRow = false;
+                    }
+                </tr>
                 }
             </tbody>
         </table>
