Allow editing of club description and name.

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -56,6 +56,11 @@
            asp-action="Create"
            class="btn btn-outline-primary btn-sm">@localizer["New Race"]</a>
     </div>
+    <div class="col-sm-4">
+        <a asp-controller="Admin"
+           asp-action="Edit"
+           class="btn btn-outline-primary btn-sm">@localizer["Edit"]</a>
+    </div>
 </div>
 <hr />
 <div class="row">
