--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -130,6 +130,7 @@
                                             <option value="@code.Name">@code.Name: @code.Description.Left(40)</option>
                                         }
                                     </select>
+                                    <input class="code-points form-control form-control-sm" type="number" placeholder="place"/>
                                 </div>
                                 <button class="btn btn-light" type="button" onclick="window.SailScores.moveUp()"><span class="fa fa-angle-up"></span></button>
                                 <button class="btn btn-light" type="button" onclick="window.SailScores.moveDown()"><span class="fa fa-angle-down"></span></button>
